--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,5 +1,5 @@
 
-.img{
+.img1{
     background-color: rgb(98, 96, 192);
     width: 100%;
     height: 7rem;
@@ -8,10 +8,10 @@
     display: flex;
     margin: 2rem 0 0 0;
   }
-  img{
+  .img{
     width: 5rem;
     padding-left: 1rem;
-  
+
   }
   .about{
     flex-direction: column;
