--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,11 +6,9 @@
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
   background-color: white;
-  /* grid-gap: 0.625rem; */
   grid-column-gap: 1rem;
   grid-row-gap:1rem;
-
-
+  height: 60rem;
 }
 .content{
   grid-area: c;
