--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -4,16 +4,20 @@
     height: 6rem;
     justify-content: flex-start;
     padding: 2rem 2rem;
+
+
 }
+
 .wrapper {
     display: inline-block;
     width: 20rem;
     border-radius: 10px;
     padding: 1rem 1rem;
 
-    border: 1px solid grey ;
+    border: 1px solid grey;
 }
-.wrap{
+
+.wrap {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -21,33 +25,45 @@
     width: 5rem;
 }
 
-.top{
+.top {
     display: flex;
     justify-content: space-between;
 }
-.footer{
+
+.footer {
     padding-top: 1rem;
     display: flex;
     justify-content: space-between;
 }
+
 .name {
     color: #6A6791;
+    overflow: hidden
 }
-.status{
+
+.status {
     color: #A8BCA3;
     padding-top: .7rem;
 
 }
-.button{
+
+.button {
     width: 4rem;
 }
+
 .city {
     color: #2D4627;
+}
+
+.avatar {
+    width: 50px;
+}
+
+.selectedPage {
+    font-weight: bold;
 
 }
-.avatar{
-    width: 50px ;
-}
-.selectedPage{
-    font-weight: bold;
+.currentPage{
+    width: 100vh;
+    overflow: hidden;
 }
