--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,5 +1,5 @@
 
-.dialogs{
+/*.dialogs{
     display: flex;
     margin: 2rem;
 }
@@ -10,5 +10,5 @@
 .messages{
     padding-left: 5rem;
     margin: .8rem;
-}
+}*/
 
