--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,7 +1,7 @@
 .wrapper{
-    display: flex;
-    justify-content: center;
-    margin: 5rem auto;
+/*    display: flex;
+    justify-content: center;*/
+/*    margin: 5rem auto;*/
 }
 .input{
     width: 200px;
