--- a/src/components/common/Preloader/Preloader.module.css
+++ b/src/components/common/Preloader/Preloader.module.css
@@ -1,3 +1,14 @@
 .loader{
     width: 5rem;
 }
+.loader {
+    padding-top: 1rem;
+    width: 5rem;
+    margin: 0 auto;
+
+}
+.loaderPoz{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
