--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -44,6 +44,10 @@
 
 .wrap {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    justify-content: center;
+
+}
+.wrapButton{
+    display: flex;
+    justify-content: center;
 }
