--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -11,11 +11,11 @@
 
 .wrapper {
     display: inline-block;
-    width: 20rem;
+    width: 80%;
     height: 7rem;
     border-radius: 10px;
     padding: 1rem 1rem;
-    margin-left: 1rem;
+    margin: 1rem;
     border: 1px solid grey;
 }
 
